# Zephyr-Music

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/: App.vue  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: localMusic.ts  music.ts  netease.ts
src/components/: GlobalSearchBar.vue  Icon.vue  LibraryView.vue  NeteaseView.vue  NowPlayingView.vue  PlayerBar.vue  QueueView.vue  SearchView.vue  SettingsPanel.vue  Sidebar.vue  Slider.vue
src/composables/: logger.ts  rodioBridge.ts  useAudioBinding.ts  useAudioVisualizer.ts  utils.ts
src/stores/: player.ts
