[package]
name = "zephyr-music"
version = "1.0.1"
description = "Zephyr · 现代化本地音乐播放器"
authors = ["Zephyr"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zephyr_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
urlencoding = "2"
rodio = "0.19"
lofty = "0.21"

# This feature is enabled by `tauri build` (production). It tells the tauri
# crate to embed the frontendDist into the binary (custom protocol) instead of
# loading from devUrl at runtime. When building with plain `cargo build` for
# a release, you MUST pass `--features custom-protocol` or the exe will try
# to load the frontend from http://localhost:1420 at runtime (blank window).
[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 16
opt-level = 2
strip = true
